--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@800&display=swap" rel="stylesheet">
+<script src="https://kit.fontawesome.com/c4e1da4913.js" crossorigin="anonymous"></script>
 </head>
 <body>
     <header class="header-container">
@@ -25,8 +26,8 @@
                 <h3 class="banner-text">Hi, I am</h3>
                 <h1 class="banner-title">Ebrahim Kholilullah</h1>
                 <p class="banner-style">I am a talented, ambitious, and hardworking person, with a wide range of skills and abilities and experience in Full Stack Development.</p>
-                <button class="btn-primary">Download Cv</button>
-                <button class="btn-primary">Contact</button>
+                <button class="btn-primary"> <i class="fa-solid fa-download"></i> Download Cv</button>
+                <button class="btn-primary"> <i class="fa-solid fa-phone"></i> Contact</button>
             </div>
             <img class="profile-pic" src="images/ebrahim.jpg" alt="">
         </div>
@@ -115,29 +116,29 @@
                 <div class="resume-column">
                     <h3 class="resume-column-title">My Experience</h3>
                     <div class="resume-item">
-                        <h2 class="resume-item-title">Master in Computer Engineering</h2>
-                        <h3 class="resume-item-institute">Daffodil International University</h3>
+                        <h2 class="resume-item-title">Sr. Font End Developer</h2>
+                        <h3 class="resume-item-institute">Apple Inc / 2020 - Current</h3>
                         <p class="resume-item-description">List skill/technologies here. You can change the icon above 
                             to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.</p>
                     </div>
                     <hr>
                     <div class="resume-item">
-                        <h2 class="resume-item-title">Master in Computer Engineering</h2>
-                        <h3 class="resume-item-institute">Daffodil International University</h3>
+                        <h2 class="resume-item-title">Jr. Font End Developer</h2>
+                        <h3 class="resume-item-institute">Dribbble Inc / 2018 - 2022</h3>
                         <p class="resume-item-description">List skill/technologies here. You can change the icon above 
                             to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.</p>
                     </div>
                     <hr>
                     <div class="resume-item">
-                        <h2 class="resume-item-title">Master in Computer Engineering</h2>
-                        <h3 class="resume-item-institute">Daffodil International University</h3>
+                        <h2 class="resume-item-title">HTML,CSS,REACT,NODE JS Developer</h2>
+                        <h3 class="resume-item-institute">Adobe Inc / 2017 - 2018</h3>
                         <p class="resume-item-description">List skill/technologies here. You can change the icon above 
                             to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.</p>
                     </div>
                 </div>
             </div>
             <div class="download-cv">
-                <button class="btn-primary">Download</button>
+                <button class="btn-primary"> <i class="fa-solid fa-download"></i> Download</button>
             </div>
         </section>
     </main>
